@@ -1,3 +1,8 @@
+Thu Jul 31 02:03:46 BST 2008  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (try_section): Free info and info_buffer if there is a
+	  failure before adding a candidate (Coverity CID #24).
+
 Thu Jul 31 01:41:17 BST 2008  Colin Watson  <cjwatson@debian.org>
 
 	* src/manp.c (add_nls_manpath): Copy manpathlist to omanpathlist
